<resources>
    <string name="app_name">Abstract</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email: </string>
    <string name="prompt_password">Password: </string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_password_confirm">Confirm Password: </string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="register_redirect">Register Here</string>
    <string name="login_redirect">Login Here</string>
    <string name="login_subtitle">Welcome Back to Simplicity</string>
    <string name="register_subtitle">Become an Abstract-ician</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search Abstract</string>
    <string name="content_description_search">Search Bar</string>
</resources>