<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_title"
        style="@style/LogoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:text="@string/app_name"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tagline"
        style="@style/Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:text="@string/login_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        style="@style/InputLayouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tagline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            style="@style/InputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/InputLayouts.passwordLayouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            style="@style/InputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_confirm_layout"
        style="@style/InputLayouts.passwordLayouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password_confirm"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_confirm"
            style="@style/InputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/auth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_margin"
        android:text="@string/login"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_confirm_layout" />

    <Button
        android:id="@+id/switch_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_redirect"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/auth_button"
        app:layout_constraintTop_toTopOf="@id/auth_button" />

</androidx.constraintlayout.widget.ConstraintLayout><!-- Multi-line comments follow the patterns of
    single line comments, there seems to not really be a difference -->